# vlm_mujoco_graspnet

./: .gitignore  debug_grasp_viewer.py  grasp_process.py  grasp_process_old.py  main_vlm.py  vlm_process.py  vlm_process_old.py
manipulator_grasp/assets/scenes/: scene.xml  scene0.xml
manipulator_grasp/env/: ur5_grasp_env.py
ros2_ws/: temp_ur5e.urdf
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/vlm_ros2_interface/lib/vlm_ros2_interface/: mujoco_bridge  vlm_client
ros2_ws/install/vlm_ros2_interface/share/vlm_ros2_interface/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/ros2_moveit2_ur5e_grasp/src/octo_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/ros2_moveit2_ur5e_grasp/src/octo_bringup/launch/: octomap.launch.py
ros2_ws/src/ros2_moveit2_ur5e_grasp/src/robotiq_description/: package.xml
ros2_ws/src/ros2_moveit2_ur5e_grasp/src/robotiq_moveit_config/: package.xml
ros2_ws/src/ros2_moveit2_ur5e_grasp/src/ur5e_gripper_control/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_moveit2_ur5e_grasp/src/ur5e_gripper_control/config/: target_pose_list.yaml
ros2_ws/src/ros2_moveit2_ur5e_grasp/src/ur5e_gripper_control/include/ur5e_gripper_control/: ur5e_gripper.h
ros2_ws/src/ros2_moveit2_ur5e_grasp/src/ur5e_gripper_control/launch/: demo.launch.py
ros2_ws/src/ros2_moveit2_ur5e_grasp/src/ur5e_gripper_control/src/: demo.cpp  ur5e_gripper.cpp
ros2_ws/src/ros2_moveit2_ur5e_grasp/src/ur5e_gripper_description/: package.xml
ros2_ws/src/ros2_moveit2_ur5e_grasp/src/ur5e_gripper_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_moveit2_ur5e_grasp/src/ur5e_octomap_moveit/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_moveit2_ur5e_grasp/src/ur5e_octomap_moveit/src/: octomap_to_planning_scene_node.cpp
ros2_ws/src/ros2_moveit2_ur5e_grasp/src/ur_bringup/: package.xml  setup.py
ros2_ws/src/ros2_moveit2_ur5e_grasp/src/vision/: package.xml  setup.py
ros2_ws/src/vlm_ros2_interface/: package.xml  setup.cfg  setup.py  test_grasp_duck.py
ros2_ws/src/vlm_ros2_interface/config/: moveit_controllers.yaml  ur5e.srdf
ros2_ws/src/vlm_ros2_interface/launch/: moveit_demo.launch.py  moveit_mujoco.launch.py
ros2_ws/src/vlm_ros2_interface/urdf/: ur5e_robotiq.urdf.xacro
ros2_ws/src/vlm_ros2_interface/vlm_ros2_interface/: fix_structure.sh  mujoco_bridge.py  ros2_action_executor.py  ros2_mujoco_core.py  ros2_vlm_manager.py  vlm_client.py
(+26 files in other folders)
